tests/fixtures/invalid/pow_int_bytes_str.py
# Cannot call pow() with Int, Bytes, Str
x = pow(1, b"hello", "hello")
